# jgdtrans-py

./: .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: CI.yml  ci.yaml
JGDtrans/: __init__.py  __main__.py  dms.py  mesh.py  parser.py  point.py  transformer.py  types.py  utils.py
doc/source/: conf.py  index.md
doc/source/autodoc/: JGDtrans.dms.rst  JGDtrans.error.rst  JGDtrans.mesh.rst  JGDtrans.parser.rst  JGDtrans.point.rst  JGDtrans.rst  JGDtrans.transformer.rst  JGDtrans.types.rst  JGDtrans.utils.rst  jgdtrans.dms.rst  jgdtrans.error.rst  jgdtrans.mesh.rst  jgdtrans.par.rst  jgdtrans.parser.rst  jgdtrans.point.rst  jgdtrans.rst  jgdtrans.transformer.rst  jgdtrans.types.rst  modules.rst  package.rst
doc/source/docs/: note_impl.md  sample.ipynb  user_guide.ja.md  user_guide.md
jgdtrans/: __init__.py  __main__.py  dms.py  error.py  mesh.py  par.py  parser.py  point.py  transformer.py  types.py
test/: test_dms.py  test_mesh.py  test_par.py  test_parser.py  test_point.py  test_transformer.py  test_utils.py
tests/: test_dms.py  test_mesh.py  test_par.py  test_point.py  test_transformer.py
